Creature / Attack Class added

--- a/ConsoleAppTest/ConsoleAppTest.vcxproj
+++ b/ConsoleAppTest/ConsoleAppTest.vcxproj
@@ -127,17 +127,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Attack.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterCreation.cpp" />
     <ClCompile Include="ConsoleAppTest.cpp" />
+    <ClCompile Include="Creature.cpp" />
+    <ClCompile Include="DamageType.h" />
     <ClCompile Include="Merchant.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Attack.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterCreation.h" />
     <ClInclude Include="CharacterType.h" />
+    <ClInclude Include="Creature.h" />
     <ClInclude Include="Merchant.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="Weapon.h" />
     <ClInclude Include="WeaponType.h" />
   </ItemGroup>
